# micro-bench

./: CMakeLists.txt  README.md
benches/: collections.cpp  exceptions_simple.cpp  for_traversal.cpp  indirection.cpp  map_access.cpp  move_gains.cpp  placement_new.cpp  shared_ptr_creation.cpp  small_collections.cpp  smart_pointers.cpp  stream_endl.cpp  string_storage.cpp  unique_ptr_member.cpp
